# 100-Days-Of-Code

./: CMakeLists.txt  CONTRIBUTING.md  README.md  password_generator.py
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
DAY 38/BLOG/: db.sqlite3  manage.py
Day 1/: Day1.py  exercise1.py  exercise3.py
Day 10/: more_functions.py
Day 10/Exercise/: days_in_month.md  days_in_month.py
Day 10/project/: calculator.py
Day 12/: main.py
Day 13/: main.py
Day 14/: art.py
Day 15/: main.py
Day 16/: main.py
Day 17/: main.py
Day 18/: dotted_line.py  hirst_painting.py  shape.py  spirograph.py  square.py
Day 19/: etch_sketch.py  turtle_race.py
Day 2/: EXERCISE1.md  project.py
Day 22/: ball.py  paddle.py  scoreboard.py
Day 23/: scoreboard.py
Day 24/: main.py  snake.py
Day 25/project/: states_to_learn.csv
Day 26/Dictionary Comprehension/: exercise_2.py  iterate_pandas_dataframe.py
Day 26/Project/: main.py
Day 27/: main.py
Day 27/project/: main.py
Day 28/: main.py
Day 29/: data.txt
Day 3/: EXERCISE2.md  EXERCISE7.md  day3.py  exercise2.py  exercise3.py  exercise6.py
Day 30/: main.py
Day 30/Project/: main.py
Day 30/password_manager/: main.py
Day 32/: main.py
Day 33/: main.py
Day 33/challenge/: main.py
Day 34/: main  main.cpp  main.py
Day 34/example/: db.sqlite3
Day 34/js/: README.md
Day 35/: Main.java  SolidRectangle.java  Triangle.java  app.py  index.html  readme.md  script.js  style.css
Day 35/flaskr/: __init__.py
Day 36/counter/: README.md  manage.py
Day 37/appland/: db.sqlite3  manage.py
Day 4/: rock_paper_scissor.py  rpss.py
Day 40/djangochat/: db.sqlite3
Day 44/: index.html
Day 45/: main.py  website.html
Day 46/: app.py  index.html  style.css
Day 47/: ursina_game.py
Day 47/Javascript/: index.html
Day 47/google clone/: index.html  style.css
Day 47/project/: main.py
Day 48/: Readme.md  comment.js  instagram_login.py  main.py
Day 49/ecom/: db.sqlite3
Day 5/: adding_even.py  average_height.py  fizz_buzz.md  fizz_buzz.py  password_generator.py
Day 50/drf/: db.sqlite3
Day 51/LoginSystem/: db.sqlite3  manage.py
Day 52/Calculator/: index.css  index.html
Day 52/Javascript Crash Course/: index.css  index.html  script.js
Day 53/Godaddy Login Clone/: README.md  index.html  style.css
Day 54/: app.py  requirements.txt  todo.db
Day 54/templates/: about.html  base.html  index.html  product.html  update.html
Day 55/: app.py
Day 55/resume_demo/: manage.py
Day 55/templates/: index.html
Day 56/Day 1/: bitwise  bitwise.cpp  factorial  factorial.c  factorial.cpp  primeornot  primeornot.c  traverse.c  traverse.py
Day 56/Leetcode/: twosum.cpp
Day 57/: GuessNumber.java  Main.java  Separate.java  one.java
Day 57/Guessing Number/: main.py
Day 57/madlibs/: main.py
Day 58/: a.out  app 2.py  copyarray  copyarray.c  insertionsort.py  iteration  iteration.c  linear  linear.c  list  list.c  names  names.c  number  number.c  phonebook  phonebook.c  program01  program01.c  program01.cpp  program01.py  program02.cpp  readme.md  recursion  recursion.c  topologicalsorting.py
Day 59/: README.md  main.py
Day 59/JavaScript/: index.html  script.js
Day 59/Section 1/: sectionOne.txt
Day 59/Section 2/: info.txt  script.js
Day 6/: main.py
Day 60/: app.py
Day 60/template/: base.html  index.html
Day 61/: README.md  index.html  script.js  style.css
Day 62/: Readme.md  index.html
Day 62/css/: style.css
Day 63/: index.html  package-lock.json  package.json  script.js  style.css
Day 64/: index.html  index.js  package-lock.json  package.json  script.js  style.css  styles.css  tailwind.config.js
Day 64/public/: index.html  style.css
Day 64/todos-list/: package-lock.json
Day 65/: index.html  script.js  style.css
Day 65/gfg/: manage.py
Day 66/: index.html  main.py  script.js  style.css
Day 66/tutorial/: package-lock.json
Day 67/: app.js  client.py  help.md  main.py  package-lock.json  package.json
Day 67/config/: db.js  default.json
Day 67/models/: Book.js
Day 67/textutils/: package-lock.json
Day 68/: app.js
Day 68/views/: 404.html  about.html  index.html
Day 69/: app.js  index.html  package-lock.json  package.json  script.js
Day 70/tutorial/: package-lock.json
Day 71/original/: index.html
Day 72/: OOPS.java
Day 73/: index.html  package-lock.json
Day 74/: index.html  style.css
Day 8/: prime_number_checker.py
Day 9/: blind_auction.py  clear.py  grading.py
Day1/: Day1.py  exercise2.py  project.py
Day10/: docstrings.py  more_functions.py  multiple_return_value.py
Day10/project/: calculator.py
Day11/: main.py
Day12/: main.py  number_guessing.py
Day13/: exercise_1.py  exercise_2.py  main.py
Day14/: main.py
Day15/: main.py
Day16/: main.py
Day17/: data.py  main.py  quiz_brain.py
Day18/: hirst_painting.py  random_walk.py  shape.py
Day2/: Day2.py  EXERCISE2.md  EXERCISE3.md  exercise1.py  exercise2.py  exercise3.py
Day20/: main.py  snake.py
Day20_and_21/: food.py
Day22/: ball.py  main.py
Day23/: car_manager.py  main.py  player.py
Day24/: food.py  main.py  scoreboard.py
Day24/Mail Merge Project Start/: main.py
Day25/: main.py  squirrel_count.csv
Day26/: README.md  second_exercise.py
Day27/: main.py  playground.py
Day28/: main.py
Day29/: main.py
Day3/: EXERCISE1.md  EXERCISE3.md  EXERCISE5.md  EXERCISE6.MD  day3.py  exercise1.py  exercise4.py  exercise5.py  exercise6.py  exercise7.py
Day30/: indexerrorexercise.py  keyerrorhandlingexercise.py  main.py
Day32/: main.py
Day35/: main.py
Day4/: bill_pay.md  bill_pay.py  head_tail.py  main.py  rock_paper_scissor.py  tresure_map.md  tresure_map.py  who_will_pay.md  who_will_pay.py
Day41/: index.html
Day44/: index.html
Day45/: main.py
Day46/: date.py  main.py
Day5/: average_height.py  high_score.md  high_score.py  main.py
Day6/: main.py
Day7/: hangman.drawio  main.py
Day8/: caesar_cipher.py  main.py  paint_area_calculations.py
Day9/: blind_auction.py  dictionary.py  grading.md  grading.py  nesting.py
Testing/: main.cpp  main.hpp
(+155 files in other folders)
